# xrnn

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml  ref.yml  sdist.yml  tests.yml
tests/: test_activations.py  test_c_layers.py  test_config.py  test_data_handler.py  test_layer_utils.py  test_layers.py  test_losses.py  test_model.py  test_optimizers.py
xrnn/: __init__.py  activations.py  c_layers.py  config.py  data_handler.py  example.py  layer_utils.py  layers.py  layers_d.c  layers_d.cpp  layers_f.c  layers_f.cpp  losses.py  metrics.py  model.py  ops.py  optimizers.py
